fixed wrap issue for search bar

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -656,7 +656,7 @@ a:hover, a:focus {
 }
 
 .navbar-form-custom {
-  float: left;
+  display: inline-block;
   height: 52px;
   width: 400px;
   padding: 7px 0 0 0;
@@ -870,10 +870,6 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 
 @media(max-width:768px) {
-
-  .navbar-form-custom, #logo {
-    display: none;
-  }
 
   .navbar-static-top {
     margin: 0;
